<!--
  ~ DataMunch by Markus Ressel
  ~ Copyright (c) 2018.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name" translatable="false">DataMunch</string>
    <string name="app_description" translatable="false">FreeNAS Server Management app.</string>

    <string name="menu_item_status">Status</string>
    <string name="menu_item_accounts">Accounts</string>
    <string name="menu_item_services">Services</string>
    <string name="menu_item_sharing">Sharing</string>
    <string name="menu_item_storage">Storage</string>
    <string name="menu_item_jails">Jails</string>
    <string name="menu_item_plugins">Plugins</string>
    <string name="menu_item_system">System</string>
    <string name="menu_item_tasks">Tasks</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>

    <string name="server_status_title">Status</string>

    <string name="server_status_services_title">Services</string>

    <string name="jails" translatable="false">Jails</string>

    <string name="afp" translatable="false">AFP</string>
    <string name="nfs" translatable="false">NFS</string>
    <string name="cifs" translatable="false">CIFS</string>

    <string name="comment">Comment</string>

    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="sort_order">Sort order</string>
    <string name="no_items_found">No items</string>
    <string name="unknown_error">Unknown Error</string>

    <string name="updates">Updates</string>
    <string name="operation">Operation</string>

    <string name="alerts">Alerts</string>

    <string name="maintenance">Maintenance</string>

    <string name="add">Add</string>

    <string name="error">Error</string>
    <string name="exception_raised">Exception raised</string>

    <string name="warning">Warning</string>
    <string name="danger_zone_warning">Be sure to have physical access to your
        server in case anything goes wrong!</string>

    <string name="shutdown">Shutdown</string>

    <string name="do_it">Do it!</string>
    <string name="abort">Abort</string>

    <string name="details">Details</string>

    <string name="plugins" translatable="false">Plugins</string>

    <string name="close">Close</string>

    <string name="enabled">Enabled</string>
    <string name="description">Description</string>

    <string name="smart" translatable="false">S.M.A.R.T.</string>

    <string name="type">Type</string>

    <string name="level">Level</string>
    <string name="message">Message</string>
    <string name="dismissed">Dismissed</string>

    <string name="day_of_the_week">Day of the Week</string>
    <string name="day_of_the_month">Day of the Month</string>
    <string name="month">Month</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>

    <string name="hosts">Hosts</string>
    <string name="mapAllGroup">Map All Group</string>
    <string name="mapAllUser">Map All User</string>
    <string name="mapRootGroup">Map Root Group</string>
    <string name="mapRootUser">Map Root User</string>
    <string name="quiet">Quiet</string>
    <string name="read_only">Read Only</string>
    <string name="security">Security</string>
    <string name="paths">Paths</string>

    <string name="browsable">Browsable</string>
    <string name="defaultPermissions">Default Permissions</string>
    <string name="guestOk">Guest OK</string>
    <string name="home">Home</string>
    <string name="allowedHosts">Allowed Hosts</string>
    <string name="deniedHosts">Denied Hosts</string>
    <string name="auxSmbConf">Aux Smb Conf</string>
    <string name="recycleBin">Recycle bin</string>
    <string name="showHiddenFiles">Show hidden files</string>

    <string name="interval">Interval</string>
    <string name="retCount">Ret Count</string>
    <string name="repeat_unit">Repeat Unit</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="by_weekday">By Weekday</string>
    <string name="recursive">Recursive</string>

    <string name="no_title">No Title</string>

</resources>
