<?xml version="1.0" encoding="utf-8"?><!--
  ~ DataMunch by Markus Ressel
  ~ Copyright (c) 2018.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/material_view_pager_placeholder" />

        <android.support.v7.widget.CardView style="@style/detail_content_cardview">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/sub_header"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/idTextView"
                    style="@style/sub_header_content_textview" />

                <TextView
                    style="@style/sub_header"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/nameTextView"
                    style="@style/sub_header_content_textview" />

                <TextView
                    style="@style/sub_header"
                    android:text="@string/comment" />

                <TextView
                    android:id="@+id/commentTextView"
                    style="@style/sub_header_content_textview" />

                <CheckBox
                    android:id="@+id/browsableCheckBox"
                    style="@style/sub_header_content_textview"
                    android:text="@string/browsable" />

                <CheckBox
                    android:id="@+id/defaultPermissionsCheckBox"
                    style="@style/sub_header_content_textview"
                    android:text="@string/defaultPermissions" />

                <CheckBox
                    android:id="@+id/guestOkCheckBox"
                    style="@style/sub_header_content_textview"
                    android:text="@string/guestOk" />

                <TextView
                    style="@style/sub_header"
                    android:text="@string/home" />

                <CheckBox
                    android:id="@+id/homeCheckBox"
                    style="@style/sub_header_content_textview" />

                <TextView
                    style="@style/sub_header"
                    android:text="@string/allowedHosts" />

                <TextView
                    android:id="@+id/allowedHostsTextView"
                    style="@style/sub_header_content_textview" />

                <TextView
                    style="@style/sub_header"
                    android:text="@string/deniedHosts" />

                <TextView
                    android:id="@+id/deniedHostsTextView"
                    style="@style/sub_header_content_textview" />

                <TextView
                    style="@style/sub_header"
                    android:text="@string/auxSmbConf" />

                <TextView
                    android:id="@+id/auxSmbConfTextView"
                    style="@style/sub_header_content_textview" />

                <TextView
                    style="@style/sub_header"
                    android:text="@string/path" />

                <TextView
                    android:id="@+id/pathTextView"
                    style="@style/sub_header_content_textview" />

                <CheckBox
                    android:id="@+id/recycleBinCheckBox"
                    style="@style/sub_header_content_textview"
                    android:text="@string/recycleBin" />

                <CheckBox
                    android:id="@+id/showHiddenFilesCheckBox"
                    style="@style/sub_header_content_textview"
                    android:text="@string/showHiddenFiles" />

                <CheckBox
                    android:id="@+id/roCheckBox"
                    style="@style/sub_header_content_textview"
                    android:text="@string/ro" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>