<?xml version="1.0" encoding="utf-8"?><!--
  ~ DataMunch by Markus Ressel
  ~ Copyright (c) 2018.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->


<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="de.markusressel.datamunch.view.fragment.storage.task.TaskViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/material_view_pager_placeholder" />

            <androidx.cardview.widget.CardView style="@style/detail_content_cardview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <CheckBox
                        style="@style/sub_header_content_textview"
                        android:checked="@{viewModel.task_enabled}"
                        android:enabled="false"
                        android:text="@string/enabled" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/name" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.task_ret_unit}" />

                    <CheckBox
                        style="@style/sub_header_content_textview"
                        android:checked="@{viewModel.task_recursive}"
                        android:enabled="false"
                        android:text="@string/recursive" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/interval" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{String.valueOf(viewModel.task_interval)}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/retCount" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{String.valueOf(viewModel.task_ret_count)}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/repeat_unit" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.task_repeat_unit}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/begin" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.task_begin}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/end" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.task_end}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/by_weekday" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.task_byweekday}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/filesystem" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.task_filesystem}" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>