<?xml version="1.0" encoding="utf-8"?><!--
  ~ DataMunch by Markus Ressel
  ~ Copyright (c) 2018.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->


<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="de.markusressel.datamunch.view.fragment.sharing.nfs.NfsShareViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/material_view_pager_placeholder" />

            <androidx.cardview.widget.CardView style="@style/detail_content_cardview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/id" />

                    <TextView
                        android:id="@+id/idTextView"
                        style="@style/sub_header_content_textview"
                        android:text="@{String.valueOf(viewModel.id)}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/name" />

                    <TextView
                        android:id="@+id/nameTextView"
                        style="@style/sub_header_content_textview" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/hosts" />

                    <TextView
                        android:id="@+id/hostsTextView"
                        style="@style/sub_header_content_textview"
                        android:text="@{String.valueOf(viewModel.nfs_hosts)}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/comment" />

                    <TextView
                        android:id="@+id/commentTextView"
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.nfs_comment}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/mapAllGroup" />

                    <TextView
                        android:id="@+id/mapAllGroupTextView"
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.nfs_mapall_group}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/mapAllUser" />

                    <TextView
                        android:id="@+id/mapAllUserTextView"
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.nfs_mapall_user}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/mapRootGroup" />

                    <TextView
                        android:id="@+id/mapRootGroupTextView"
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.nfs_maproot_group}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/mapRootUser" />

                    <TextView
                        android:id="@+id/mapRootUserTextView"
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.nfs_maproot_user}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/quiet" />

                    <CheckBox
                        android:id="@+id/quietCheckbox"
                        style="@style/sub_header_content_textview"
                        android:checked="@{viewModel.nfs_quiet}"
                        android:enabled="false" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/ro" />

                    <CheckBox
                        android:id="@+id/roCheckbox"
                        style="@style/sub_header_content_textview"
                        android:checked="@{viewModel.nfs_ro}"
                        android:enabled="false" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/security" />

                    <TextView
                        android:id="@+id/securityTextView"
                        style="@style/sub_header_content_textview"
                        android:text="@{String.valueOf(viewModel.nfs_security)}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/paths" />

                    <TextView
                        android:id="@+id/pathsTextView"
                        style="@style/sub_header_content_textview"
                        android:text="@{String.valueOf(viewModel.nfs_paths)}" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>