<?xml version="1.0" encoding="utf-8"?><!--
  ~ DataMunch by Markus Ressel
  ~ Copyright (c) 2018.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->


<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="de.markusressel.datamunch.view.fragment.storage.scrubs.ScrubViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/material_view_pager_placeholder" />

            <androidx.cardview.widget.CardView style="@style/detail_content_cardview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.scrub_enabled}"
                        android:text="@string/enabled" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/id" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{String.valueOf(viewModel.id)}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/description" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.scrub_description}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/volume" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.scrub_volume}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/threshold" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{String.valueOf(viewModel.scrub_threshold)}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/day_of_the_week" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.scrub_dayweek}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/day_of_the_month" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.scrub_daymonth}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/month" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.scrub_month}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/hour" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.scrub_hour}" />

                    <TextView
                        style="@style/sub_header"
                        android:text="@string/minute" />

                    <TextView
                        style="@style/sub_header_content_textview"
                        android:text="@{viewModel.scrub_minute}" />

                    <!-- TODO: show all info -->

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>