<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/material_view_pager_placeholder" />

        <android.support.v7.widget.CardView style="@style/detail_content_cardview">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/sub_header"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/idTextView"
                    style="@style/sub_header_content_textview" />

                <TextView
                    style="@style/sub_header"
                    android:text="@string/level" />

                <TextView
                    android:id="@+id/levelTextView"
                    style="@style/sub_header_content_textview" />

                <TextView
                    style="@style/sub_header"
                    android:text="@string/message" />

                <TextView
                    android:id="@+id/messageTextView"
                    style="@style/sub_header_content_textview" />

                <TextView
                    style="@style/sub_header"
                    android:text="@string/dismissed" />

                <TextView
                    android:id="@+id/dismissedTextView"
                    style="@style/sub_header_content_textview" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>