<?xml version="1.0" encoding="utf-8"?><!--
  ~ DataMunch by Markus Ressel
  ~ Copyright (c) 2018.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->


<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/statusPage">

    <fragment
        android:id="@+id/statusPage"
        android:name="de.markusressel.datamunch.view.fragment.ServerStatusFragment"
        android:label="@string/menu_item_status"
        tools:layout="@layout/fragment_server_status" />

    <include app:graph="@navigation/nav_graph_account" />

    <include app:graph="@navigation/nav_graph_jail" />

    <include app:graph="@navigation/nav_graph_plugins" />

    <include app:graph="@navigation/nav_graph_storage" />

    <include app:graph="@navigation/nav_graph_sharing" />

    <include app:graph="@navigation/nav_graph_services" />

    <include app:graph="@navigation/nav_graph_system" />

    <include app:graph="@navigation/nav_graph_tasks" />

    <fragment
        android:id="@+id/preferencesPage"
        android:name="de.markusressel.datamunch.view.fragment.preferences.MainPreferenceFragment"
        android:label="@string/menu_item_settings" />

    <fragment
        android:id="@+id/aboutPage"
        android:name="de.markusressel.datamunch.view.fragment.pages.AboutPage"
        android:label="@string/menu_item_about" />

</navigation>